Correct auth, handler, tsoa, ts config, login, products, tests
